--- a/nico/web/index.html
+++ b/nico/web/index.html
@@ -18,7 +18,7 @@
         <meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
 
         <!-- Webpage Title -->
-        <title>Webpage Title</title>
+        <title>Quero Photography</title>
         
         <!-- Styles -->
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&family=Poppins:wght@600&display=swap" rel="stylesheet">
@@ -82,7 +82,7 @@
             <div class="area-1">
                 <div class="text-container">
                     <h1 class="h1-large">Lorem ips dolo <span id="js-rotating">amets, conse, tetur</span></h1>
-                    <p class="p-large">Semper viverra nam libero justo at risus viverra adipis cing at in tellus integer feugiat sceler isques semi</p>
+                    <p class="p-large">Hello, I am testing the development of my website...</p>
                     <a class="page-scroll" href="#about"><i class="fas fa-chevron-down"></i></a>
                 </div> <!-- end of text-container -->
             </div><!-- end of area-1 on same line and no space between comments to eliminate margin white space --><div class="area-2"></div> <!-- end of area-2 -->
