--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="container">
                 
                 <!-- Text Logo - Use this if you don't have a graphic logo -->
-                <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Name</a> -->
+                <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Ramiro Quero</a> -->
 
                 <!-- Image Logo -->
                 <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.svg" alt="alternative"></a> 
