--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="container">
                 
                 <!-- Text Logo - Use this if you don't have a graphic logo -->
-                <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Ramiro Quero</a> -->
+                <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Name</a> -->
 
                 <!-- Image Logo -->
                 <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.svg" alt="alternative"></a> 
@@ -54,7 +54,7 @@
                             <a class="nav-link page-scroll" href="#services">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#projects">Projects</a>
+                            <a class="nav-link page-scroll" href="#projects">Portfolio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link page-scroll" href="#contact">Contact</a>
@@ -81,8 +81,8 @@
         <header class="header">
             <div class="area-1">
                 <div class="text-container">
-                    <h1 class="h1-large">Lorem ips dolo <span id="js-rotating">amets, conse, tetur</span></h1>
-                    <p class="p-large">Semper viverra nam libero justo at risus viverra adipis cing at in tellus integer feugiat sceler isques semi</p>
+                    <h1 class="h1-large">Quero Photography <span id="js-rotating">art, images, memories</span></h1>
+                    <p class="p-large">Capture the essence of the moments in your mind and in pictures</p>
                     <a class="page-scroll" href="#about"><i class="fas fa-chevron-down"></i></a>
                 </div> <!-- end of text-container -->
             </div><!-- end of area-1 on same line and no space between comments to eliminate margin white space --><div class="area-2"></div> <!-- end of area-2 -->
@@ -95,8 +95,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2 class="h2-heading">Quis commodo odio</h2>
-                        <p class="p-large">At risus viverra adipiscing at in tellus integer feugiat scelerisque. Arcu non odio euismod lacinia. Malesuada pellentesque elit eget gravida cum sociis natoque. Quis commodo odio aenean sed. Facilisi nullam vehicula ipsum a arcu cursus vitae</p>
+                        <h2 class="h2-heading">Ramiro Quero</h2>
+                        <p class="p-large">I like to create artistic impressions of your experience for you to reconnect with every time you see your pictures. I have always liked photography, but it wasn't until my wife gifted me a camera for my birthday that I delved deeply into creating photographs that attract the eye and the mind. </p>
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
                 <div class="row">
@@ -450,7 +450,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <p class="p-small">Copyright © Some name</p>
+                        <p class="p-small">Copyright © Ramiro Quero</p>
                     </div> <!-- end of col -->
                 </div> <!-- enf of row -->
             </div> <!-- end of container -->
