--- a/index.html
+++ b/index.html
@@ -109,16 +109,16 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="skill-box">
-                            <h4>Ipsuma Arcuven</h4>
-                            <p>Arcu vitae elementum curabitur vitae nunc sed velit nec feugiat nisl pretium fusce id velit ut tortor egestas integer revi</p>
+                            <h4>Family Portraits</h4>
+                            <p>Your kids grow, you grow, your family grows--fast! Celebrate your family by saving your memories and put them on your walls.</p>
                         </div> <!-- end of skill-box -->
                         <div class="skill-box">
-                            <h4>Arcuvita Elemen</h4>
-                            <p>Amet nulla facilisi morbi tempus iaculis tempus urna et pharetra pharetra massa massa ultricies mi quis faucibus orna</p>
+                            <h4>Senior Pictures</h4>
+                            <p>Congratulations! You have made it... almost! Celebrate by doing a fun session. Remember, this is really for your family to brag about you.</p>
                         </div> <!-- end of skill-box -->
                         <div class="skill-box">
-                            <h4>Curabitur Vitae</h4>
-                            <p>Est pellentesque elit ullamcorper dignissim cras tincidunt morbi enim nunc faucibus a pellentesque sit amet porttitor eget</p>
+                            <h4>Wedding Photography</h4>
+                            <p>Arguably the best day of your life. As the years by, the details will become blurry. Prevent that by capturing the quintessence of it all.</p>
                         </div> <!-- end of skill-box -->
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
