--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="area-1">
                 <div class="text-container">
                     <h1 class="h1-large">Quero Photography <span id="js-rotating">art, images, memories</span></h1>
-                    <p class="p-large">Capture the essence of the moments in your mind and in pictures</p>
+                    <p class="p-large">Michigan-based photographer capturing the essence of the moments of life and storing them in your mind through pictures</p>
                     <a class="page-scroll" href="#about"><i class="fas fa-chevron-down"></i></a>
                 </div> <!-- end of text-container -->
             </div><!-- end of area-1 on same line and no space between comments to eliminate margin white space --><div class="area-2"></div> <!-- end of area-2 -->
@@ -96,7 +96,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h2 class="h2-heading">Ramiro Quero</h2>
-                        <p class="p-large">I like to create artistic impressions of your experience for you to reconnect with every time you see your pictures. I have always liked photography, but it wasn't until my wife gifted me a camera for my birthday that I delved deeply into creating photographs that attract the eye and the mind. </p>
+                        <p class="p-large">I like to create artistic impressions of your experience for you to reconnect with every time you see your pictures. I have always liked photography, but it wasn't until my wife gifted me a camera for my birthday that I delved deeply into creating photographs that attract the eye and the mind. My pictures aren't 100% perfect from the technical side of things, but life isn't either. To borrow a mentor's term, my photographs are "perfectly incomeplete." I believe your life is to, but that's the beauty of it all.</p>
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
                 <div class="row">
@@ -109,16 +109,16 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="skill-box">
-                            <h4>Family Portraits</h4>
-                            <p>Your kids grow, you grow, your family grows--fast! Celebrate your family by saving your memories and put them on your walls.</p>
+                            <h4>Family</h4>
+                            <p>Being a family man is hands down my favorite role. I married the love of my life, Tara, and we have now two new loves--Beni & Juni. Life gets richer and richer as you grow.</p>
                         </div> <!-- end of skill-box -->
                         <div class="skill-box">
-                            <h4>Senior Pictures</h4>
-                            <p>Congratulations! You have made it... almost! Celebrate by doing a fun session. Remember, this is really for your family to brag about you.</p>
+                            <h4>Teacher</h4>
+                            <p>I taught high school for almost 9 yers. My friends sometimes remind me I don't have to teach them anything. I love sharing what I learn, especially photography. </p>
                         </div> <!-- end of skill-box -->
                         <div class="skill-box">
-                            <h4>Wedding Photography</h4>
-                            <p>Arguably the best day of your life. As the years by, the details will become blurry. Prevent that by capturing the quintessence of it all.</p>
+                            <h4>Photography</h4>
+                            <p>I was 29 (or 28?) when my wife gifted me a Nikon D750. My photographer friends gave me lots of tutorials for free (thanks a lot!), and I started practicing. I crave feedback on my pictures, so I ask if from anyone who can help me grow. I continue to grow as a photographer, so I thank you in advance for helping me grow.</p>
                         </div> <!-- end of skill-box -->
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
@@ -132,8 +132,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2 class="h2-heading">Odiout enimbait</h2>
-                        <p class="p-heading">Odio ut enim blandit volutpat maecenas volutpat blandit aliquam etiam. Tortor dignissim convallis aenean et. Eget magna fermentum iaculis eu non</p>
+                        <h2 class="h2-heading">Photography Services</h2>
+                        <p class="p-heading">I enjoy learning new styles and tehcniques, if you have an idea of a service not outlined below, I'd love to help you make it a reality.</p>
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
                 <div class="row">
@@ -142,22 +142,22 @@
                             <li class="media">
                                 <i class="fas fa-rocket"></i>
                                 <div class="media-body">
-                                    <h5>Faucibus pulvinar</h5>
-                                    <p>Velit laoreet id donec ultrices tincidunt arcu habitasse platea dictumst quisque sagittis purus sit pulvinar</p>
+                                    <h5>Senior Solo Shoot</h5>
+                                    <p>Congratulations! You have made it... almost! Celebrate by doing a fun session. Remember, this is really for your family to brag about you.</p>
                                 </div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-bullhorn"></i>
                                 <div class="media-body">
-                                    <h5>Elementum integer</h5>
-                                    <p>Velit laoreet id donec ultrices tincidunt arcu habitasse platea dictumst quisque sagittis purus sit pulvinar</p>
+                                    <h5>Senior Group Shoot</h5>
+                                    <p>Same as above for for the whole gang (remember, bulk is always cheaper).</p>
                                 </div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-font"></i>
                                 <div class="media-body">
-                                    <h5>Enimnee Voluptare</h5>
-                                    <p>Velit laoreet id donec ultrices tincidunt arcu habitasse platea dictumst quisque sagittis purus sit pulvinar</p>
+                                    <h5>Couple Session</h5>
+                                    <p>Bring your loved one on a delightful shoot to celebrate, to update your album, to post online, or to put in your Christmas cards.</p>
                                 </div>
                             </li>
                         </ul>
@@ -167,22 +167,22 @@
                             <li class="media">
                                 <i class="fas fa-keyboard"></i>
                                 <div class="media-body">
-                                    <h5>Dictumst quisque</h5>
-                                    <p>Velit laoreet id donec ultrices tincidunt arcu habitasse platea dictumst quisque sagittis purus sit pulvinar</p>
+                                    <h5>Professional Portraits</h5>
+                                    <p>Do you need a professional pictures to update your resume? Studio quality pictures may help you stand out amongst the crowd.</p>
                                 </div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-photo-video"></i>
                                 <div class="media-body">
-                                    <h5>Purussit ametro</h5>
-                                    <p>Velit laoreet id donec ultrices tincidunt arcu habitasse platea dictumst quisque sagittis purus sit pulvinar</p>
+                                    <h5>Family Session</h5>
+                                    <p>Dad, mom, kids, fur kids, all or some of the above? Sure thing! Let's memorialize it as it is now. Life keeps flying by, save the memory of the now.</p>
                                 </div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-users"></i>
                                 <div class="media-body">
-                                    <h5>Conference speaking</h5>
-                                    <p>Velit laoreet id donec ultrices tincidunt arcu habitasse platea dictumst quisque sagittis purus sit pulvinar</p>
+                                    <h5>Weddings/Elopements</h5>
+                                    <p>Arguably the best day of your life. As the years by, the details will become blurry. Prevent that by capturing the quintessence of it all.</p>
                                 </div>
                             </li>
                         </ul>
@@ -198,7 +198,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h4>Neque aliquam vestibulum morbi blandit cursus risus at. Donec adipiscing tristique risus nec feugiat in fermentum</h4>
+                        <h4>This is your shoot, and I help you make it a reality. Please let me know of any questions I haven't answered. I would honor to work for you in creating art, images, and memories for you and yours.</h4>
                         <a class="btn-solid-lg page-scroll" href="#contact">Contact Me</a>
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
@@ -212,8 +212,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2 class="h2-heading">Accumsan in nisl nisi</h2>
-                        <p class="p-heading">Accumsan in nisl nisi scelerisque eu ultrices. Id diam maecenas ultricies mi eget mauris pharetra. Velit laoreet id donec ultrices tincidunt non nisi</p>
+                        <h2 class="h2-heading">Portfolio</h2>
+                        <p class="p-heading">Here is a sample of my work. Thanks for taking the time to see the art, images, and memories others have allowed me to save.</p>
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
                 <div class="row">
@@ -369,14 +369,13 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="text-container">
-                            <h2>Sapien et ligula</h2>
-                            <p class="sub-heading">Ullamcorper malesuada proin libero adipiscing diam donec adipiscing tristique risus nec feugiat in egestas <a class="orange no-line" href="#your-link">services</a></p>
+                            <h2>Ramiro Quero</h2>
+                            <p class="sub-heading">Please contact me to schedule your session. You may also contact with any questions, ideas, projects, or requests that you didn't find in the<a class="orange no-line" href="#your-link">services</a></p>
 
                             <!-- Contact Details -->
                             <ul class="list-unstyled li-space-lg">
-                                <li>22 Interdumsa, Velit Euismod, AB 12345, CD</li>
-                                <li>+40 123 456 789</li>
-                                <li>+40 123 456 789</li>
+                                <li>Berrien Springs, MI</li>
+                                <li>541-221-5160</li>
                                 <li><a class="orange no-line" href="mailto:office@domain.com">office@domain.com</a></li>
                                 <li><a class="orange no-line" href="#your-link">www.domain.com</a></li>
                             </ul>
