--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h2 class="h2-heading">Ramiro Quero</h2>
-                        <p class="p-large">I like to create artistic impressions of your experience for you to reconnect with every time you see your pictures. I have always liked photography, but it wasn't until my wife gifted me a camera for my birthday that I delved deeply into creating photographs that attract the eye and the mind. My pictures aren't 100% perfect from the technical side of things, but life isn't either. To borrow a mentor's term, my photographs are "perfectly incomeplete." I believe your life is to, but that's the beauty of it all.</p>
+                        <p class="p-large">I like to create artistic impressions of your experience for you to reconnect with every time you see your pictures. I have always liked photography, but it wasn't until my wife gifted me a camera for my birthday that I delved deeply into creating photographs that attract the eye and the mind. My pictures aren't 100% perfect from the technical side of things, but life isn't either. To borrow a mentor's term, my photographs are "perfectly incomeplete." I believe your life is too, but that's the beauty of it all.</p>
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
                 <div class="row">
