--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         <!-- Card -->
                         <div class="card">
                             <div class="card-image">
-                                <a href="project.html">
+                                <a href="#"> <!-- project.html -->
                                     <img class="img-fluid" src="images/project-1.jpg" alt="alternative">
                                 </a>
                             </div>
