--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                         <div class="card">
                             <div class="card-image">
                                 <img class="img-fluid" src="images/project-1.jpg" alt="alternative">
-                                <a href="#"> <!-- project.html -->
+                                <a href="project.html">
                                 </a>
                             </div>
                             <div class="card-body">
