--- a/index.html
+++ b/index.html
@@ -227,7 +227,20 @@
                                 </a>
                             </div>
                             <div class="card-body">
-                                <strong>Projetitle.com</strong> - Tempor orci eu lobortis elem ntum nibh pretium quam vulputate digner
+                                <strong>Evah</strong> - Senior shoot
+                            </div>
+                        </div>
+                        <!-- end of card -->
+
+                        <!-- Card -->
+                        <div class="card">
+                            <div class="card-image">
+                              <img class="img-fluid" src="images/project-2.jpg" alt="alternative">
+                                <a href="project.html">
+                                </a>
+                            </div>
+                            <div class="card-body">
+                                <strong>Priscilla</strong> - Senior shoot
                             </div>
                         </div>
                         <!-- end of card -->
@@ -236,8 +249,19 @@
                         <div class="card">
                             <div class="card-image">
                                 <a href="project.html">
-                                    <img class="img-fluid" src="images/project-2.jpg" alt="alternative">
-                                </a>
+                                </a><img class="img-fluid" src="images/project-3.jpg" alt="alternative">
+                            </div>
+                            <div class="card-body">
+                                <strong>Sarai</strong> - Fun shoot
+                            </div>
+                        </div>
+                        <!-- end of card -->
+
+                        <!-- Card -->
+                        <div class="card">
+                            <div class="card-image">
+                                <a href="project.html">
+                                </a>                                    <img class="img-fluid" src="images/project-4.jpg" alt="alternative">
                             </div>
                             <div class="card-body">
                                 <strong>Projetitle.com</strong> - Tempor orci eu lobortis elem ntum nibh pretium quam vulputate digner
@@ -249,8 +273,7 @@
                         <div class="card">
                             <div class="card-image">
                                 <a href="project.html">
-                                    <img class="img-fluid" src="images/project-3.jpg" alt="alternative">
-                                </a>
+                                </a>                                    <img class="img-fluid" src="images/project-5.jpg" alt="alternative">
                             </div>
                             <div class="card-body">
                                 <strong>Projetitle.com</strong> - Tempor orci eu lobortis elem ntum nibh pretium quam vulputate digner
@@ -262,8 +285,7 @@
                         <div class="card">
                             <div class="card-image">
                                 <a href="project.html">
-                                    <img class="img-fluid" src="images/project-4.jpg" alt="alternative">
-                                </a>
+                                </a>                                    <img class="img-fluid" src="images/project-6.jpg" alt="alternative">
                             </div>
                             <div class="card-body">
                                 <strong>Projetitle.com</strong> - Tempor orci eu lobortis elem ntum nibh pretium quam vulputate digner
@@ -275,8 +297,7 @@
                         <div class="card">
                             <div class="card-image">
                                 <a href="project.html">
-                                    <img class="img-fluid" src="images/project-5.jpg" alt="alternative">
-                                </a>
+                                </a>                                    <img class="img-fluid" src="images/project-7.jpg" alt="alternative">
                             </div>
                             <div class="card-body">
                                 <strong>Projetitle.com</strong> - Tempor orci eu lobortis elem ntum nibh pretium quam vulputate digner
@@ -288,8 +309,7 @@
                         <div class="card">
                             <div class="card-image">
                                 <a href="project.html">
-                                    <img class="img-fluid" src="images/project-6.jpg" alt="alternative">
-                                </a>
+                                </a>                                    <img class="img-fluid" src="images/project-8.jpg" alt="alternative">
                             </div>
                             <div class="card-body">
                                 <strong>Projetitle.com</strong> - Tempor orci eu lobortis elem ntum nibh pretium quam vulputate digner
@@ -301,34 +321,7 @@
                         <div class="card">
                             <div class="card-image">
                                 <a href="project.html">
-                                    <img class="img-fluid" src="images/project-7.jpg" alt="alternative">
-                                </a>
-                            </div>
-                            <div class="card-body">
-                                <strong>Projetitle.com</strong> - Tempor orci eu lobortis elem ntum nibh pretium quam vulputate digner
-                            </div>
-                        </div>
-                        <!-- end of card -->
-
-                        <!-- Card -->
-                        <div class="card">
-                            <div class="card-image">
-                                <a href="project.html">
-                                    <img class="img-fluid" src="images/project-8.jpg" alt="alternative">
-                                </a>
-                            </div>
-                            <div class="card-body">
-                                <strong>Projetitle.com</strong> - Tempor orci eu lobortis elem ntum nibh pretium quam vulputate digner
-                            </div>
-                        </div>
-                        <!-- end of card -->
-
-                        <!-- Card -->
-                        <div class="card">
-                            <div class="card-image">
-                                <a href="project.html">
-                                    <img class="img-fluid" src="images/project-9.jpg" alt="alternative">
-                                </a>
+                                </a>                                    <img class="img-fluid" src="images/project-9.jpg" alt="alternative">
                             </div>
                             <div class="card-body">
                                 <strong>Projetitle.com</strong> - Tempor orci eu lobortis elem ntum nibh pretium quam vulputate digner
